2005-05-15  Adam Schreiber  <sadam@clemson.edu>

    * daemon/seahorse-daemon.c:
    * plugins/nautilus/seahorse-pgp-preferences.c: Change PACKAGE 
    to actual program name. Fixes behavior with GNOME crash dialog.

2006-05-15  Nate Nielsen  <nielsen@memberwebs.com>

    * libseahorse/seahorse-util.c:
    * libseahorse/seahorse-util.h:
    * plugins/nautilus/seahorse-tool.c: Don't add '.asc' extensions
    to files, when using armor mode.
    
2006-05-13  Nate Nielsen  <nielsen@memberwebs.com>

    * libseahorse/seahorse-op.c:
    * libseahorse/seahorse-op.h: Remove old unused functions.
    
2006-05-13  Nate Nielsen  <nielsen@memberwebs.com>

    * plugins/nautilus/seahorse-tool-files.c: Fix problem with 
    not resolving relative file names properly.
    * plugins/nautilus/seahorse-tool-progress.c: Fix problem with 
    not starting the progress window process.
    * plugins/nautilus/seahorse-tool.c: Don't offer to package
    files when signing.
    * plugins/nautilus/seahorse-tool-files.c: Cancel properly when 
    multiple files are being operated on.
    
2006-05-12  Adam Schreiber  <sadam@clemson.edu>

    * data/seahorse.schemas.in:
    * libseahorse/seahorse-gconf.h:
    * libseahorse/seahorse-prefs.c:
    * libseahorse/seahorse-prefs.glade:
    * src/Makefile.am:
    * src/seahorse-key-manager.c:
    * src/seahorse-key-properties.c:
    * src/seahorse-keyserver-sync.c:
    * src/seahorse-keyserver-sync.h(added): Added auto sync ability
    (Bug #335418)
    * libseahorse/seahorse-pgp-key-op.c: Changed error msg to use 
    unsigned int instead of int.

2006-05-09  Nate Nielsen  <nielsen@memberwebs.com>

    * AUTHORS:
    * daemon/Makefile.am:
    * daemon/seahorse-daemon.1 (added):
    * plugins/nautilus/Makefile.am:
    * plugins/nautilus/seahorse-tool.1 (added): Manual pages
    Written by Michael Mende. 

2006-05-09  Adam Schreiber  <sadam@clemson.edu>

    * libseahorse/eggtrayicon.c: Patch to implement transparency 