@@ -1,4 +1,11 @@
-2005-05-15  Adam Schreiber  <sadam@clemson.edu>
+2006-05-15  Nate Nielsen  <nielsen@memberwebs.com>
+
+    * libseahorse/seahorse-key-model.c:
+    * libseahorse/seahorse-key-model.h:
+    * libseahorse/seahorse-key-store.c: Fix problem with multiple
+    of same keys being displayed 
+    
+2006-05-15  Adam Schreiber  <sadam@clemson.edu>
 
     * daemon/seahorse-daemon.c:
     * plugins/nautilus/seahorse-pgp-preferences.c: Change PACKAGE 
